cynic-codegen/src/fragment_derive/arguments/snapshots/cynic_codegen__fragment_derive__arguments__tests__case_10_boolean_scalar.snap
---
source: cynic-codegen/src/fragment_derive/arguments/tests.rs
assertion_line: 32
expression: "analyse(literals, field, Some(&format_ident!(\"MyArguments\").into()),\n        Span::call_site()).map(|o| o.arguments)"

---
Ok(
    [
        Field {
            schema_field: InputValue {
                description: None,
                name: FieldName {
                    graphql_name: "aBool",
                },
                value_type: NullableType(
                    NamedInputType(
                        "Boolean",
                    ),
                ),
                has_default: false,
            },
            value: Some(
                Literal(
                    Bool(
                        LitBool {
                            value: true,
                        },
                    ),
                ),
            ),
        },
    ],
)
