cynic-codegen/src/fragment_derive/arguments/snapshots/cynic_codegen__fragment_derive__arguments__tests__case_12_unknown_parameter.snap
---
source: cynic-codegen/src/fragment_derive_2/arguments/tests.rs
assertion_line: 30
expression: "analyse(literals, field, Span::call_site()).map(|o| o.arguments)"

---
Err(
    Errors {
        errors: [
            Error(
                "no such field",
            ),
        ],
    },
)
