cynic-codegen/src/fragment_derive/arguments/snapshots/cynic_codegen__fragment_derive__arguments__tests__empty_nullable_args.snap
---
source: cynic-codegen/src/fragment_derive/arguments/tests.rs
assertion_line: 36
expression: "analyse(literals, field, Some(&format_ident!(\"MyArguments\").into()),\n        Span::call_site()).map(|o| o.arguments)"
---
Ok(
    [],
)
